fix: music in ip

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <!-- Nút bật tắt nhạc -->
+    <button id="musicToggle">🔇</button>
+
     <!-- Nhạc nền -->
     <audio id="bgmusic" autoplay loop muted>
         <source src="music.mp3" type="audio/mpeg">
