--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
     <!-- Slide -->
     <div class="slider">
         <div class="slides">
-            <div class="slide effect-zoom active">Mọi mục tiêu đều đạt được 🎯</div>
-            <div class="slide effect-rotate">Sức khỏe dồi dào 💪</div>
-            <div class="slide effect-up">Gia đình luôn hạnh phúc ❤️</div>
-            <div class="slide effect-glow">Tiền vào như nước 💰</div>
-            <div class="slide effect-slide">Và điều cuối cùng là ✨</div>
+            <div class="slide effect-zoom active">Đây là 1 vài lời chúc mà Hiếu dành cho người bạn của mình</div>
+            <div class="slide effect-zoom">Chúc bạn chạm tới mọi ước mơ 🎯</div>
+            <div class="slide effect-rotate">Sức khỏe dồi dào, chẳng lo âu chờ 💪</div>
+            <div class="slide effect-up">Gia đình ấm áp, hạnh phúc đong đầy ❤️</div>
+            <div class="slide effect-up">Học hành tấn tới từng ngày 📚</div>
+            <div class="slide effect-glow">Tiền vào như nước, lộc đầy trong tay 💰</div>
+            <div class="slide effect-slide">Và</div>
+            <div class="slide effect-slide">Điều cuối cùng là ✨</div>
         </div>
     </div>
 
